# git-demo

./: .gitignore  .prettierrc  Makefile  README.md  package-lock.json  package.json  pyproject.toml  sql.d.ts  tsconfig.json  worker-configuration.d.ts  wrangler.toml
lib/: db.ts
sql/: 01_schema.sql  02_example_query.sql
src/: __init__.py  demo.py  index.ts  web.py
static/: index.html
