[project]
name = "git-claude-demo"
version = "0.1.0"
description = "DuckDB + Python demo for Git and coding-agent training"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
